<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ramencode.ramen.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/titleLayout"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ramen"
            android:id="@+id/title"
            android:textSize="48sp"
            android:textColor="@color/colorBlack"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ramen_subtext"
            android:id="@+id/textView3"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginFormLayout">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_alignLeft="@+id/passwordField"
                android:layout_alignStart="@+id/passwordField" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/passwordField"
                android:hint="@string/password"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_below="@+id/emailField" />

            <RelativeLayout
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordField"
                android:id="@+id/loginFormButtonLayout"
                android:layout_alignLeft="@+id/passwordField"
                android:layout_alignStart="@+id/passwordField"
                android:layout_alignRight="@+id/passwordField"
                android:layout_alignEnd="@+id/passwordField">



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/button"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:singleLine="false" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:id="@+id/button2"
                    android:layout_alignTop="@+id/button"
                    android:singleLine="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentTop="true" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skiplogin"
                    android:id="@+id/button3"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/button" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
